<resources>
    <string name="app_name">Kotlin Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equals">=</string>
    <string name="sum">+</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="subtraction">-</string>
    <string name="dot">.</string>
    <string name="empty" />
    <string name="percent">%</string>
    <string name="maybe_enough">Used 16 digits already enough maybe?</string>

    <string-array name="numbers">
        <item>@string/zero</item>
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
        <item>@string/nine</item>
    </string-array>
</resources>