<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sevenButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button20"
        style="@style/KeyPadNumber"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintStart_toEndOf="@+id/button19" />

    <Button
        android:id="@+id/button21"
        style="@style/KeyPadNumber"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/button20" />

    <Button
        android:id="@+id/eightButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton" />

    <Button
        android:id="@+id/nineButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton" />

    <Button
        android:id="@+id/subtractionButton"
        style="@style/KeyPadNumber"
        android:layout_width="0dp"
        android:text="@string/subtraction"
        app:layout_constraintBottom_toTopOf="@+id/sumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nineButton" />

    <Button
        android:id="@+id/divideButton"
        style="@style/KeyPadNumber"
        android:layout_width="0dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/subtractionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nineButton" />

    <Button
        android:id="@+id/button19"
        style="@style/KeyPadNumber"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="0dp"
        android:text="@string/equals"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commaButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/percentButton"
        style="@style/KeyPadNumber"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fourButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sixButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton" />

    <Button
        android:id="@+id/fiveButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton" />

    <Button
        android:id="@+id/threeButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/commaButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton" />

    <Button
        android:id="@+id/twoButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton" />

    <Button
        android:id="@+id/commaButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zeroButton" />

    <Button
        android:id="@+id/zeroButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentButton" />

    <Button
        android:id="@+id/oneButton"
        style="@style/KeyPadNumber"
        android:onClick="onClickButton"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/percentButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sumButton"
        style="@style/KeyPadNumber"
        android:layout_width="0dp"
        android:text="@string/sum"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sixButton" />

    <TextView
        android:id="@+id/responseTextView"
        style="@style/lastResponseTextView"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>